--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,7 @@ dependencies:
   firebase_auth: ^0.18.3
   cloud_firestore: ^0.14.3
   firebase_storage: ^5.0.1
+  image_picker: ^0.6.7+14
 
 
 dev_dependencies:
