--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,7 @@ dependencies:
   firebase_auth: ^0.18.3
   cloud_firestore: ^0.14.3
   firebase_storage: ^5.0.1
+  line_icons: ^0.2.0
 
 
 dev_dependencies:
