Added Task Creation feature

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ dependencies:
   simple_gravatar: ^1.0.5
   google_sign_in: ^4.5.6
   data_connection_checker: ^0.3.4
+  intl: ^0.16.1
 
 dev_dependencies:
   flutter_test:
