--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,12 +23,15 @@ dependencies:
   firebase_auth: ^0.18.3
   cloud_firestore: ^0.14.3
   firebase_storage: ^5.0.1
-
+  firebase_messaging: ^7.0.3
+  #  flutter_local_notifications: ^3.0.2
   image_picker: ^0.6.7+14
   simple_gravatar: ^1.0.5
   google_sign_in: ^4.5.6
   data_connection_checker: ^0.3.4
   intl: ^0.16.1
+  flutter_dnd: ^0.1.3
+
 
 dev_dependencies:
   flutter_test:
