--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,13 +24,16 @@ dependencies:
   cloud_firestore: ^0.14.3
   firebase_storage: ^5.0.1
   firebase_messaging: ^7.0.3
-  #  flutter_local_notifications: ^3.0.2
+  flutter_local_notifications: ^3.0.2
   image_picker: ^0.6.7+14
   simple_gravatar: ^1.0.5
   google_sign_in: ^4.5.6
   data_connection_checker: ^0.3.4
   intl: ^0.16.1
   flutter_dnd: ^0.1.3
+  rxdart: ^0.25.0
+  path_provider: ^1.6.11
+  http: ^0.12.1
 
 
 dev_dependencies:
