--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   rxdart: ^0.25.0
   path_provider: ^1.6.11
   http: ^0.12.1
+  share: ^0.6.5+4
 
 dev_dependencies:
   flutter_test:
