--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,7 +14,7 @@ dependencies:
 
   cupertino_icons: ^1.0.0
   google_fonts: ^1.1.1
-  flutter_svg: ^0.18.1
+  flutter_svg: ^0.20.0-nullsafety.3
   flutter_spinkit: "^4.1.2"
   provider: ^4.3.2+2
   get: ^3.6.2
