--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -63,11 +63,11 @@ android {
             storePassword keystoreProperties['storePassword']
         }
     }
-//    buildTypes {
-//        release {
-//            signingConfig signingConfigs.release
-//        }
-//    }
+    buildTypes {
+        release {
+            signingConfig signingConfigs.release
+        }
+    }
 }
 
 flutter {
