--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   http: ^0.12.1
   share: ^0.6.5+4
   timezone: ^0.5.9
+  step_progress_indicator: ^0.2.5+8
 
 dev_dependencies:
   flutter_test:
